test_programs/compile_failure/noirc_frontend_tests_as_trait_path_syntax_no_impl/src/main.nr

    trait Foo {
        type Assoc;
    }

    struct Bar {}

    impl Foo for Bar {
        type Assoc = i32;
    }

    fn main() {
        let _: i64 = 1 as <Bar as Foo<Assoc = i8>>::Assoc;

        let _ = Bar {}; // silence Bar never constructed warning
    }
    